modify(sonarqube): sonarqube issue 일부 제거